# IA_Montecarlo_BriX

./: CMakeLists.txt  README.md  arbitre.cc  arbitre.hh  brix.cc  brix.hh  jeu.cc  jeu.hh  main.cc
joueurs/: CMakeLists.txt  joueur.cc  joueur.hh  joueur_manuel.cc  joueur_manuel.hh  joueur_montecarlo_MBR.cc  joueur_montecarlo_MBR.hh  joueur_random.cc  joueur_random.hh
montecarlo/: CMakeLists.txt  arbre.cc  arbre.hh  montecarlo.cc  montecarlo.hh  noeud.cc  noeud.hh  relation.cc  relation.hh
